Изменил функционал по удалению пользователя и питомцев. Теперь совершаются проверки на принадлежность пользователю перед тем, как изменить/удалить питомца. Реализовано каскадное удаление Пользователь-Питомец-Особенности